# NeuroErgo

./: .gitignore  CITATION.cff  Dataset.py  LICENSE  Main.py  README.md  human_forward_kinematic.py  main.py
REBA/body_part_reba_calculator/: partial_REBA_to_total_REBA.py
REBA/body_part_reba_calculator/Degree_to_REBA/: __init__.py  leg_reba_score.py  neck_reba_score.py  partial_REBA_to_total_REBA.py  trunk_reba_score.py  upperarm_reba_score.py  wrist_reba_score.py
REBA/body_part_reba_calculator/Pose_to_degrees/: leg_degrees.py  lower_arm_degrees.py  neck_degrees.py  trunk_degrees.py  upper_arm_degrees.py  wrist_degrees.py
dREBA/: Dreba_coeff_calculator.py  body_angle_value_for_learning.txt  main.py  poly_coeff_calculator.py  polynomial_coeff_calculator.py
dREBA/dREBA-matlab/: dREBA_estimate.csv  diffrentiable_reba_coeff_calculator.asv  diffrentiable_reba_coeff_calculator.m  error_data_3.csv  optimizer_tobecontinued.asv  optimizer_tobecontinued.m
dREBA/matlab/: diffrentiable_reba_coeff_calculator.m  optimizer_tobecontinued.m  poly_coeff_calculator.m  square_error_poly_coeff.m
data _backup/leg_DNN.model/: saved_model.pb
data _backup/leg_DNN.model/variables/: variables.index
data _backup/lower_arm_DNN.model/: saved_model.pb
data _backup/lower_arm_DNN.model/variables/: variables.index
data _backup/neck_DNN.model/: saved_model.pb
data _backup/neck_DNN.model/variables/: variables.data-00000-of-00001
data _backup/total_reba_from_partial_DNN.model/variables/: variables.data-00000-of-00001  variables.index
data _backup/trunk_DNN.model/variables/: variables.data-00000-of-00001  variables.index
data _backup/upper_arm_DNN.model/: saved_model.pb
data _backup/upper_arm_DNN.model/variables/: variables.data-00000-of-00001  (+1 more)
data _backup/wrist_DNN.model/: saved_model.pb
data/leg_DNN.model/: saved_model.pb
data/lower_arm_DNN.model/: saved_model.pb
data/neck_DNN.model/: saved_model.pb
data/super_model_DNN.model/: saved_model.pb
data/total_reba_from_partial_DNN.model/: saved_model.pb
data/trunk_DNN.model/: saved_model.pb
data/upper_arm_DNN.model/: saved_model.pb
data/wrist_DNN.model/: saved_model.pb
robot/catkin_ws/src/panda_description/: CMakeLists.txt  README.md  package.xml
robot/catkin_ws/src/panda_description/launch/: panda.rviz  panda_rviz.launch
(+60 files in other folders)
